# Bplusplus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Run_model.py  collect_images.py  detection_config.yaml  full_pipeline.ipynb  insect.yaml  pyproject.toml  requirements.txt  test.py  train_validate.py
.github/workflows/: cross-platform-test.yml
B++ CV model/: CV_model_notes.md  Species_included_in_pretrained_model.xlsx
data/: data.ylm  filtered_insect_species.csv  names.csv  occurence_filtered.csv
notebooks/: Test.ipynb  build_model.ipynb  collect-prepare-train.ipynb  full_pipeline.ipynb  run_model.py
notebooks/data/: names.csv
runs/classify/train/: args.yaml
runs/classify/train2/: args.yaml
runs/classify/train2/weights/: best.pt  last.pt
runs/classify/train3/: args.yaml  results.csv
runs/classify/train3/weights/: best.pt  last.pt
runs/classify/train4/: args.yaml
runs/classify/train4/weights/: best.pt  last.pt
runs/detect/train/: args.yaml
runs/detect/train10/: args.yaml
runs/detect/train11/: args.yaml
runs/detect/train12/: args.yaml
runs/detect/train13/: args.yaml
runs/detect/train14/: args.yaml
runs/detect/train15/: args.yaml
runs/detect/train16/: args.yaml
runs/detect/train17/: args.yaml
runs/detect/train18/: args.yaml
runs/detect/train19/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train20/: args.yaml
runs/detect/train21/: args.yaml
runs/detect/train22/: args.yaml
runs/detect/train23/: args.yaml
runs/detect/train24/: args.yaml
runs/detect/train25/: args.yaml
runs/detect/train26/: args.yaml
runs/detect/train27/: args.yaml
runs/detect/train28/: args.yaml
runs/detect/train29/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train30/: args.yaml
runs/detect/train31/: args.yaml
runs/detect/train32/: args.yaml
runs/detect/train33/: args.yaml
runs/detect/train34/: args.yaml
runs/detect/train35/: args.yaml
runs/detect/train36/: args.yaml
runs/detect/train37/: args.yaml  results.csv
runs/detect/train38/: args.yaml  results.csv
runs/detect/train39/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train40/: args.yaml
runs/detect/train41/: args.yaml
runs/detect/train42/: args.yaml
runs/detect/train43/: args.yaml
runs/detect/train44/: args.yaml
runs/detect/train45/: args.yaml
runs/detect/train46/: args.yaml
runs/detect/train47/: args.yaml
runs/detect/train48/: args.yaml
runs/detect/train49/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train50/: args.yaml
runs/detect/train51/: args.yaml
runs/detect/train52/: args.yaml
runs/detect/train53/: args.yaml  results.csv
runs/detect/train54/: args.yaml
runs/detect/train55/: args.yaml
runs/detect/train56/: args.yaml
runs/detect/train57/: args.yaml
runs/detect/train58/: args.yaml
runs/detect/train59/: args.yaml  results.csv
runs/detect/train6/: args.yaml
runs/detect/train60/: args.yaml
runs/detect/train61/: args.yaml
runs/detect/train62/: args.yaml
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml
runs/detect/train9/: args.yaml
src/bplusplus/: __init__.py  build_model.py  clean.py  collect.py  collect_and_prepare.py  collect_images.py  detector.py  inference.py  insect_detector.py  prepare.py  test.py  tracker.py  train.py  train_validate.py  validation.py
src/bplusplus/hierarchical/: test.py  train.py
src/bplusplus/resnet/: test.py  train.py
src/bplusplus/yolov5detect/: __init__.py  detect.py  insect.yaml
src/bplusplus/yolov5detect/utils/: dataloaders.py
