[tool.poetry]
name = "bplusplus"
version = "1.2.3"
description = "A simple method to create AI models for biodiversity, with collect and prepare pipeline"
authors = ["Titus Venverloo <tvenver@mit.edu>", "Deniz Aydemir <deniz@aydemir.us>", "Orlando Closs <orlandocloss@pm.me>", "Ase Hatveit <aase@mit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.25.1"
pandas = "2.1.4"
ultralytics = "8.3.173"
pyyaml = "6.0.1"
tqdm = "4.66.4"
prettytable = "3.7.0"
torch = "2.7.1"
torchvision = "0.22.1"
pillow = "11.3.0"
numpy = "1.26.4"
scikit-learn = "1.7.1"
pygbif = "0.6.5"
validators = "0.33.0"
tabulate = "0.9.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
